--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       <!-- Main nav -->
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
-        <a href="#products" class="nav-link">Products</a>
-        <a href="#science" class="nav-link">Science</a>
+        <a href="#Products.html" class="nav-link">Products</a>
+        <a href="#Science.html" class="nav-link">Science</a>
         <a href="#nutrition" class="nav-link">Nutrition</a>
-        <a href="#our-story" class="nav-link">Our Story</a>
+        <a href="#Our-Story.Html" class="nav-link">Our Story</a>
         <a href="#contact" class="nav-link">Contact</a>
       </nav>
 
