--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="Products.html" class="nav-link">Products</a>
         <a href="Science.html" class="nav-link">Science</a>
-        <a href="#nutrition" class="nav-link">Nutrition</a>
+        <a href="Nutrition.html" class="nav-link">Nutrition</a>
         <a href="Our-Story.html" class="nav-link">Our Story</a>
         <a href="#contact" class="nav-link">Contact</a>
       </nav>
