--- a/Science.html
+++ b/Science.html
@@ -3,19 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Buzzbar – Science</title>
-  <link rel="stylesheet" href="style.css?v=11" />
+  <title>BuzzBar – Natural Energy</title>
+  <link rel="stylesheet" href="style.css?v=16" />
+  <link rel="stylesheet" href="deux-style.css" />
 </head>
-<body class="subpage subpage-science">
+<body>
 
-  <!-- Soft band behind header -->
+  <!-- Soft purple band behind transparent header -->
   <div class="page-top-gradient"></div>
 
-  <!-- ===== NAVBAR (same style as main page) ===== -->
+
+  <!-- ===== NAVBAR (only once) ===== -->
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <!-- Brand (clicks back to main hero) -->
-      <a href="index.html#home" class="brand" aria-label="Buzzbar — Home">
+      <!-- Brand (clicks to top) -->
+      <a href="#home" class="brand" aria-label="Buzzbar — Home">
         <span class="brand-line">
           <span class="brand-word buzz">Buzz</span>
           <span class="brand-word bar">Bar</span>
@@ -26,14 +28,14 @@
       <!-- Main nav -->
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="Products.html" class="nav-link">Products</a>
-        <a href="Science.html" class="nav-link is-active">Science</a>
+        <a href="Science.html" class="nav-link">Science</a>
         <a href="Nutrition.html" class="nav-link">Nutrition</a>
         <a href="Our-Story.html" class="nav-link">Our Story</a>
-        <a href="index.html#contact" class="nav-link">Contact</a>
+        <a href="#contact" class="nav-link">Contact</a>
       </nav>
 
       <!-- CTA -->
-      <a href="Products.html#buy" class="cta-contact">Buy Now</a>
+      <a href="#products" class="cta-contact">Buy Now</a>
     </div>
   </header>
 
